# SessionCheck

./: .gitignore  README.md  SessionCheck.cabal  TODO.md  stack.yaml
demo/: BookShop.hs  bookShop.erl
examples/: BitTorrent.hs  BookShop.hs  BookShopPaper.hs  Calculator.hs  Coherent.hs  Compliance.hs  Concurrent.hs  Echo.hs  Echo.py  EchoClient.py  EchoServer.py  HTTPBasic.hs  HTTPBasicClient.py  HTTPBasicServer.hs  PingPong.hs  Queue.hs  SMTP.hs  SMTP.py  SMTPServer.py  bookShop.erl  bookShopPaper.erl  calculator.erl  concurrent.erl  mail.txt  queueInterface.erl
src/: SessionCheck.hs
src/SessionCheck/: Backend.hs  Classes.hs  Evaluate.hs  Predicate.hs  Spec.hs  Test.hs  Types.hs
src/SessionCheck/Backend/: Coherence.hs  Erlang.hs  HTTP.hs  TCP.hs
src/SessionCheck/Backend/Coherence/: Instances.hs  Main.hs  Types.hs
src/SessionCheck/Backend/Erlang/: Instances.hs  Main.hs  Types.hs
src/SessionCheck/Backend/HTTP/: Instances.hs  Main.hs  Predicates.hs  Types.hs
src/SessionCheck/Backend/TCP/: Instances.hs  Main.hs  Types.hs
