name:                SessionCheck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MaximilianAlgehed/SessionCheck2#README.md
license:             BSD3
license-file:        LICENSE
author:              Maximilian Algehed
maintainer:          algehed@chalmers.se
copyright:           2017 Maximilian Algehed
category:            Test 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SessionCheck.Spec,
                       SessionCheck.Classes,
                       SessionCheck.Evaluate,
                       SessionCheck.Predicate,
                       SessionCheck.Backend,
                       SessionCheck.Backend.Erlang,
                       SessionCheck.Backend.TCP,
                       SessionCheck.Backend.HTTP,
                       SessionCheck.Test,
                       SessionCheck.Types,
                       SessionCheck
  other-modules:       SessionCheck.Backend.Erlang.Instances,
                       SessionCheck.Backend.Erlang.Types,
                       SessionCheck.Backend.Erlang.Main,
                       SessionCheck.Backend.Coherence.Instances,
                       SessionCheck.Backend.Coherence.Types,
                       SessionCheck.Backend.Coherence.Main,
                       SessionCheck.Backend.Coherence,
                       SessionCheck.Backend.TCP.Main,
                       SessionCheck.Backend.TCP.Types,
                       SessionCheck.Backend.TCP.Instances,
                       SessionCheck.Backend.HTTP.Main,
                       SessionCheck.Backend.HTTP.Types,
                       SessionCheck.Backend.HTTP.Instances,
                       SessionCheck.Backend.HTTP.Predicates
  build-depends:       base >= 4.7 && < 5,
                       erlang >= 0.2.2 && < 0.3,
                       mtl >= 2.2.1 && < 2.3,
                       QuickCheck >= 2.9,
                       stm >= 2.4 && < 2.5,
                       process >= 1.4 && < 1.5,
                       deepseq >= 1.4 && < 1.5,
                       network-simple >= 0.4 && < 0.5,
                       bytestring >=0.10 && <0.20,
                       network >= 2.6.3.2 && <2.7,
                       http-client >= 0.5 && <0.6,
                       http-types,
                       case-insensitive,
                       warp >= 3.2 && <3.3,
                       wai
  default-language:    Haskell2010

-- Part of the small HTTP example
executable HTTPBasicServer
  hs-source-dirs: examples
  main-is: HTTPBasicServer.hs
  build-depends: base >= 4.7 && <5,
                 servant-server >= 0.11 && < 0.13,
                 wai,
                 warp,
                 mtl,
                 servant-lucid

source-repository head
  type:     git
  location: https://github.com/MaximilianAlgehed/SessionCheck2
